<resources>
    <string name="app_name">移动监控Demo</string>
    <string name="monitor_toast_exit">再按一次退出应用</string>
    <string name="monitor_app_hint">欢迎来到阿里云移动监控\nDemo,开始你的调试吧~</string>
    <string name="monitor_crash_label">崩溃分析</string>
    <string name="monitor_btn_text_java_crash">Java Crash</string>
    <string name="monitor_btn_text_native_crash">Native Crash</string>
    <string name="monitor_btn_text_main_thread">主线程卡顿</string>
    <string name="monitor_btn_text_custom_mistake">自定义错误</string>
    <string name="monitor_btn_text_io_exception">IO异常</string>
    <string name="monitor_ability_analysis">性能分析</string>
    <string name="monitor_btn_text_page_load">测页面加载</string>
    <string name="monitor_btn_text_page_scroll">测页面滑动</string>
    <string name="monitor_btn_text_network_request">网络请求</string>
    <string name="monitor_remote_log">远程日志</string>
    <string name="monitor_btn_text_print_log">打日志</string>
    <string name="monitor_btn_text_update_nick_name">更新昵称</string>
    <string name="monitor_test_step">测试步骤</string>
    <string name="monitor_test_page_load">测页面加载</string>
    <string name="monitor_page_load_success">页面已加载成功</string>
    <string name="monitor_test_page_skate">测页面滑动</string>
    <string name="monitor_text_product_desc">阿里云推出的企业级移动应用研发平台（Enterprise Mobile Application Studio，简称 EMAS）， 源自手淘无线团队在移动应用研发领域的多年积累，采用与手淘同一套技术架构体系，旨在为企业提供全面的移动应用开发、测试、运维及运营支持，帮助企业在复杂的市场环境中保持竞争力。\n\n在移动监控方面，EMAS 提供了全面的崩溃分析、性能分析、远程日志能力。通过崩溃分析，开发者可以实时捕获应用崩溃信息，生成详细的崩溃报告，帮助迅速定位和修复问题。性能分析工具则能够监控应用的关键性能指标，确保应用在各种场景下都能稳定、高效运行。远程日志功能使开发者可以在无需用户干预的情况下获取应用日志，远程排查问题，大幅缩短问题解决时间。</string>
    <string name="monitor_special">核心特性</string>
    <string name="monitor_special_one_title">多端协同，高效接入</string>
    <string name="monitor_special_one_desc">支持Android、iOS和鸿蒙三端，业务场景快速复                      用，降低接入难度，提升开发速度。</string>
    <string name="monitor_special_two_title">技术成熟，稳定安全</string>
    <string name="monitor_special_two_desc">集成阿里巴巴积累的成熟稳定的技术框架与终端的安全经验，解决终端兼容适配性问题和开发协作管理。</string>
    <string name="monitor_special_three_title">性能优越，高可用性</string>
    <string name="monitor_special_three_desc">通过多地域部署和集群化服务，支持全球调度，保证服务的高可用性。</string>
    <string name="monitor_special_2">客户案例</string>
    <string name="monitor_text_case_desc">某证券业移动应用通过接入移动性能监控，降低崩溃率提升用户体验。</string>
    <string name="monitor_case_one_title">业务痛点</string>
    <string name="monitor_case_one_desc">某证券业移动应用某日线上Crash率出现大幅度上升，难以定位排查和修复。</string>
    <string name="monitor_case_two_title">产品方案</string>
    <string name="monitor_case_two_desc">1. 通过崩溃分析，定位Crash主因为聚类后的topN关联Crash。\n2. 通过崩溃分析，查询Crash的特征分析，即相关日志。\n3. 通过远程日志，进一步获取Crash上下文相关的用户日志。\n4. 根据核心操作，发现崩溃路径和代码根因。\n5. 准备补丁，快速发布新的灰度版本。\n6. 观察灰度发布后的Crash数据，验证修复效果。</string>
    <string name="monitor_case_three_title">价值收益</string>
    <string name="monitor_case_three_desc">协助客户快速定位和修复问题，提升应用性能并优化客户体验。</string>
    <string name="monitor_curr_nick_name">当前昵称</string>
    <string name="monitor_update_nick_name_hint">输入昵称</string>
    <string name="monitor_cancel">取消</string>
    <string name="monitor_toast_input_nick_name">请输入昵称</string>
    <string name="monitor_close">关闭</string>
    <string name="monitor_print_log">打日志</string>
    <string name="monitor_local_print_log">本地打日志</string>
    <string name="monitor_build_task">建任务</string>
    <string name="monitor_build_task_desc">在控制台新建远程日志任务</string>
    <string name="monitor_upload_log">上报日志</string>
    <string name="monitor_upload_log_desc">切换前后台即可上报</string>
    <string name="monitor_look_log">看日志</string>
    <string name="monitor_look_log_desc">在控制台查看日志</string>
</resources>
