<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="60dp"
        android:src="@drawable/monitor_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="2dp"
        android:layout_marginTop="44dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/monitor_test_page_skate"
        android:textSize="20sp"
        android:textColor="#293138"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        app:layout_constraintBottom_toBottomOf="@id/ivBack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:layout_marginHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/monitor_emas_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="阿里云EMAS"
                    android:textSize="20sp"
                    android:layout_marginStart="8dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />
                
            </LinearLayout>
            
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="14sp"
               android:layout_marginTop="15dp"
               android:lineSpacingExtra="6dp"
               android:textColor="@color/monitor_color_text_black"
               android:text="@string/monitor_text_product_desc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_special"
                android:textSize="16sp"
                android:layout_marginTop="22dp"
                android:textColor="#1F2024"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/monitor_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_special_one_title"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_special_one_desc"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="6dp"
                android:layout_marginStart="12dp"
                android:textColor="#1F2024" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/monitor_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_special_two_title"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_special_two_desc"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:lineSpacingExtra="6dp"
                android:textColor="#1F2024" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/monitor_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_special_three_title"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_special_three_desc"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:lineSpacingExtra="6dp"
                android:textColor="#1F2024" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_special_2"
                android:textSize="16sp"
                android:layout_marginTop="22dp"
                android:textColor="#1F2024"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="6dp"
                android:textColor="@color/monitor_color_text_black"
                android:text="@string/monitor_text_case_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/monitor_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_case_one_title"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_case_one_desc"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:textColor="#1F2024" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/monitor_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_case_two_title"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_case_two_desc"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:textColor="#1F2024" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/monitor_point" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_case_three_title"
                    android:textSize="14sp"
                    android:layout_marginStart="6dp"
                    android:textColor="#1F2024"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitor_case_three_desc"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:textColor="#1F2024" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>