<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="UpdateNickNameBinding" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/monitor_shape_dialog_bg">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/monitor_btn_text_update_nick_name"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/monitor_color_text_black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monitor_curr_nick_name"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:textColor="@color/monitor_color_text_gray"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etNickName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/monitor_update_nick_name_hint"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:overScrollMode="never"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:lines="1"
            android:textColorHint="@color/monitor_color_text_gray"
            android:textSize="16sp"
            android:textColor="@color/monitor_color_text_black"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/monitor_input_bg"
            android:layout_marginTop="8dp"
            app:layout_goneMarginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvLabel" />


        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/monitor_cancel"
            android:textColor="@color/monitor_color_text_black"
            android:textSize="16sp"
            android:layout_marginTop="116dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/monitor_shape_btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/etNickName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvConfirm"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/monitor_btn_text_update_nick_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/monitor_shape_bg_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCancel"
            app:layout_constraintTop_toTopOf="@id/tvCancel"
            android:gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>